# LOBE_analysis

./: README.md  pyproject.toml  scratch_netvis.ipynb
config/: config.yml
notebooks/: hippunfold_volume.ipynb
resources/: dataset-HCP_subjects.tsv  dataset-LOBE_subjects.tsv
resources/brainnetome/: fsaverage.BN_Atlas.32k_fs_LR_updated.dlabel.nii
workflow/: Snakefile
workflow/rules/: atlas.smk  common.smk  dwi.smk  fmri.smk  fmri_vol.smk  func.smk  hippunfold.smk  mrtproc.smk  plotting.smk  tabular.smk  zipfiles.smk
workflow/scripts/: add_metadata_to_dseg_tsv.py  calc_sfc.py  concat_tsv.py  denoise_cifti.py  import_hcp_demog.py  lut_bids_to_itksnap.py  lut_cifti_to_bids.py  plot_chord.py  plot_network.py  plot_pconn_png.py  plot_sfc_markers_png.py  struc_conn_csv_to_pconn_cifti.py
