[tool.poetry]
name = "lobe-analysis"
version = "0.1.0"
description = "Snakemake workflow for LOBE analysis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lobe_analysis"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
snakemake = ">=7.20,<8"
pulp = "<2.8.0"
snakebids = "^0.11.2"
nilearn = "^0.10.3"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
jupyterlab = "^4.1.4"
seaborn = "^0.13.2"
netplotbrain = "^0.3.0"
networkx = "^3.2.1"
scikit-image = "^0.22.0"
nichord = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
